css style fixed 3 phones in a row shown, all images text align center fixed and details button add

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body{
     /* background-image: url(./img/02-OnePlus-9.jpg);
     background-repeat: no-repeat;
     opacity: 0.9; */
-    background-image: linear-gradient(#3E5151, #DECBA4);
+    background-image: linear-gradient(#82adad, #8b947e);
     background-repeat: no-repeat;
+}
+.col{
+    /* background-color: cadetblue; */
+    border-radius: 30px;
 }
